less/imports/features-pages.less
// not sure wether top 2 will go in container or not yet..
.main-container {

    background-color: @bg-color;
    padding: 0 5%;
    margin: 0 auto;

    @media @desktop {
        max-width: 90%;
        padding: 0;
    }
    
    .center {
        padding: 2.5rem 3rem;
        text-align: center;
    } 
    .lg-font {
      font-size: 2.5rem;
      color: @btn-primary;
    }
    .halfs-max {
        border-radius: 10px;
    }

    .btn--center {
        display: block;
        margin: 0 auto;
    }
    .features-cta-section {
        margin: 0 auto;
        width: 90%;;


        border-bottom: 2px solid @white;
        padding-bottom: 2.5rem;
        margin-bottom: 2.75rem;

        @media @desktop {
            margin-top: 2.75rem;
        }
      } // .feature-cta-section
      .feature-section {
        @media @desktop {
          display: flex;
        }
    
        .cta-phrase {

            h1,p {
                color: @white;
            }
           
          @media @desktop {
            display:flex;
            flex-direction: column;
    
            padding: 1.75rem;
            align-self: flex-start;
            width: 45%;
           
          }
        .cta-img-mobile{
          @media @desktop{
            display:none;
          }
        }
        }
    
        .cta-img {
          display: none;
          @media @desktop {
            display:block;
            max-width: 50%;
            order: 10; //third item
          }
        }
       
        .cta-info {
          @media @desktop {
            order: 3; // second item
    
            display: inline-flex;
            flex-direction: column;
            align-self: flex-end;
          }
        }
      } // .feature-section end

      
    .feature-info {
        margin: 1.5rem 0;
        color: @white;
    }
    
    .card {
        background-color: @white;
        border-radius: 10px;
        padding: 1.5rem 1rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0;

        @media @desktop {
          margin: 0 20%;
        }

        .row {
          max-width: 80%;
        }
        .list-right {
          text-align: right;
        }
        .list {
          font-size: 1.8rem;
          width: 25rem;
          padding: 1.25rem;
      }
      .fa-space {
        padding-right: 0.35rem;
      }

    }
    

    // CTA BUTTON 
    .btn-primary {
        background-color: lighten(@bg-color, 20%);
        color: @mine-shaft;
        
        &:hover {
            background-color: @btn-primary;
            color: @white;  
        }
    }
    .btn-secondary {
        background-color: #2D474F;
        border: 1px solid @iron;
        color: @white;

        &:hover {
            background-color: @btn-primary;
            border: 1px solid black;
            box-shadow: 2px 2px 2px @bg-color;
        }
    }
    
    .btn {
        border-radius: 10px;
        font-size: 2.5rem;
        padding: 0.5rem 1rem;
        box-shadow: 2px 2px 2px darken(@bg-color, 25%);
    }
    
    
    .row {
        display: flex;
        margin-bottom: 2.75rem;

        .img-thumb {
            padding: 0.25rem;
            border-radius: 0.5rem;
            max-width: 100%;
            height: auto;
            
        }
        .half {
           max-width: 50%;
        }
        .pad {
            padding: 0 1.25rem 0 1.25rem;

        }
    }
} // .container end

